web/styles/zulip.css
/* ... */
@media (width < $xl_min) or (height < $short_navbar_cutoff_height) {
    .default-sidebar-behaviour {
        &.spectator-view.default-sidebar-behaviour {
            #navbar-middle {
                /* = (width of button, square with header) * 3 (number of buttons) + 10px extra margin. */
                margin-right: calc(var(--header-height) * 3 + 10px);
            }

            #help-menu,
            #gear-menu {
                position: relative;
                right: var(--header-height);
            }
        }

        &.spectator-view #top_navbar .column-right .spectator_login_buttons {
            display: none;
        }

        .header-main .column-right {
            /* For a diminutive right column in the navbar,
               allow the width to be that of the flexing
               button elements. */
            width: auto;
        }
    }
}

%hide-right-sidebar {
    .app-main .column-right {
        display: none;

        &.expanded {
            display: block;
            position: absolute;
            float: none;
            right: 15px;
            top: 0;

            .simplebar-track.simplebar-vertical {
                right: 0;
            }

            .right-sidebar {
                box-shadow: 0 -2px 3px 0 hsl(0deg 0% 0% / 10%);
                border-left: 1px solid var(--color-border-sidebar);
                padding-right: 15px;
                padding-left: 15px;
                height: 100%;
                right: 0;
                background-color: var(--color-background);
            }
        }
    }
}

.hide-right-sidebar {
    @extend %hide-right-sidebar;
}

@media (width < $xl_min) {
    .default-sidebar-behaviour {
        @extend %hide-right-sidebar;

        .app-main .column-middle {
            margin-right: 7px;
        }

        #navbar-middle {
            /* = (width of button, square with header) * 4 (number of buttons) + 10px extra margin. */
            margin-right: calc(var(--header-height) * 4 + 10px);
        }

        #typing_notifications,
        #scheduled_message_indicator,
        #compose-content {
            margin-right: 7px;
        }
    }
}

@media (width < $md_min) {
    .default-sidebar-behaviour {
        .app-main .column-left,
        .header-main .column-left {
            display: none;
        }

        .app-main .column-left.expanded {
            display: block;
            position: absolute;
            float: none;
            left: 0;
            top: 0;

            .left-sidebar {
                background-color: var(--color-background);
                box-shadow: 0 2px 3px 0 hsl(0deg 0% 0% / 10%);
                border-right: 1px solid var(--color-border-sidebar);
                height: 100%;
                padding-left: 10px;
                width: var(--left-sidebar-width);
            }
        }

        .app-main .column-middle {
            margin-left: 7px;
            margin-right: 7px;
        }

        #navbar-middle {
            margin-left: 0;
        }

        .app-main .column-middle .column-middle-inner {
            margin-left: 0;
            margin-right: 0;
        }

        #streamlist-toggle {
            display: block;
        }

        .top-navbar-container {
            margin-left: 40px;
        }

        .typeahead.dropdown-menu .typeahead-menu li {
            width: 100%;

            & a {
                white-space: normal;
            }
        }

        #feedback_container {
            width: calc(90% - 30px);
            left: 5%;
            top: 5%;
        }

        #typing_notifications,
        #scheduled_message_indicator,
        #compose-content {
            margin-left: 7px;
        }
    }
}

@media (height < $short_navbar_cutoff_height) {
    .app-main .column-right.expanded .right-sidebar,
    .app-main .column-left.expanded .left-sidebar {
        margin-top: var(--navbar-fixed-height);
        /* For very short screen sizes, skip the relatively large top padding. */
        padding-top: 0;
    }

    /* TODO: Properly and accurately align the
       topmost headers on the left and right
       sidebar. */
    .app-main .column-right.expanded .right-sidebar-items {
        margin-top: 10px;
    }

    .app-main .column-left.expanded .left-sidebar-navigation-area {
        margin-top: 10px;
    }

    /* Usually the styling is applied directly to the icon, but here
    the icon is `position: static`, so we can't. */
    .search_closed {
        top: 5px;
    }

    #streamlist-toggle,
    #message_view_header,
    #searchbox,
    .header {
        line-height: var(--header-height);
        height: var(--header-height);
    }

    .spectator_narrow_login_button {
        height: var(--header-height) !important;
    }

    #streamlist-toggle-button {
        height: var(--header-height);
    }

    #streamlist-toggle-unreadcount {
        /* Adjust in response to shorter navbar. */
        top: 5px;
    }

    #top_navbar .column-right #personal-menu .header-button-avatar {
        width: 20px;
        height: 20px;
    }
}

@media (width < $mm_min) {
    html {
        overflow-x: hidden;
    }

    /* We don't want user to experience Zulip below this width since
       we don't develop features for below this width. */
    body,
    html,
    .app-main,
    .header-main {
        min-width: 320px;
    }

    #compose #compose-content {
        margin-right: 5px;
        margin-left: 5px;
    }
}
/* ... */

